@@ -31,6 +31,7 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC5639 providing identifiers for the Brainpool curves in
   Elliptic Curve Cryptography
 - Add RFC5697 providing Other Certificates Extension
+- Add RFC4683 providing Subject Identification Method (SIM)
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
